# cpsnarks-set

./: Cargo.toml
benches/: membership_hash.rs  membership_prime.rs  membership_prime_60.rs  modeq.rs  nonmembership_hash.rs  nonmembership_prime.rs  root.rs  snark_range.rs
src/: parameters.rs
src/commitments/: mod.rs  pedersen.rs
src/protocols/coprime/: mod.rs
src/protocols/hash_to_prime/: mod.rs  snark_hash.rs  snark_range.rs
src/protocols/membership/: mod.rs
src/protocols/modeq/: mod.rs  transcript.rs
src/protocols/nonmembership/: mod.rs
src/protocols/root/: mod.rs
src/utils/: curve.rs  mod.rs
