[package]
name = "cpsnarks-set"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
accumulator = { git = "https://github.com/0xCarbon/cpsnarks-set-accumulator", branch = "serialize" }
quick-error = "1.2.3"
rug = {version =  "1.7.0", features = ["serde"] } 
ark-bls12-381 = { version = "^0.3.0" }
merlin = "2.0.0"
rand = { version = "0.8" }
ark-ff = { version = "^0.3.0" }
ark-ec = { version = "^0.3.0" }
ark-serialize = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.1" }
ark-crypto-primitives = { version = "^0.3.0", features = [ "r1cs" ] }
legogro16 = { git = "https://github.com/kobigurk/legogro16" }
curve25519-dalek = { version = "3", optional = true, features = ["serde", "simd_backend"] }
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "develop", optional = true, features = ["yoloproofs"] }
digest = "0.8.1"
blake2 = ">= 0.8.1"
cfg-if = "0.1"
serde = { version = "1.0", features = ["derive"] }

[features]
dalek = ["curve25519-dalek", "bulletproofs"]
arkworks = []
class = []
default = ["arkworks"]

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "root"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "modeq"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "rsa"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "membership_prime"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "nonmembership_prime"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "membership_hash"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "membership_class"
harness = false
required-features = ["arkworks", "class"]

[[bench]]
name = "membership_bp"
harness = false
required-features = ["dalek"]

[[bench]]
name = "snark_range"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "membership_prime_60"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "membership_bp_60"
harness = false
required-features = ["dalek"]

[[bench]]
name = "nonmembership_hash"
harness = false
required-features = ["arkworks"]

[[bench]]
name = "nonmembership_bp"
harness = false
required-features = ["dalek"]
